[package]
name = "my_parser_kma_Zaporozhets"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Zaporozhets Dmytro was here"
exclude = ["/target/**","/.idea/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
peg = "0.8.4"
